# UTCS_To_DDVCS

./: CMakeLists.txt  G4History.macro  README.md  beam_definition.txt  howto.txt  init_vis.mac  run.mac  tcs  tcs.cc  tcs_gen.data  tcs_gen.kin_data  vis.mac
include/: TCSCalorimeterConstruction.hh  TCSDetectorConstruction.hh  TCSHistoManager.hh  TCSMuonDetectorConstruction.hh  TCSPrimaryGeneratorAction.hh
src/: NPSModuleConstruction.cc  TCSCalorimeterConstruction.cc  TCSCalorimeterConstruction.cc.wrng  TCSDetectorConstruction.cc  TCSDetectorConstruction.cc~  TCSEventAction.cc  TCSHistoManager.cc  TCSMuonDetectorConstruction.cc  TCSPrimaryGeneratorAction.cc
tcs_gdmls/: beam_pipe.gdml  calorimeter.gdml  carbon_target.gdml  cps.gdml  lheshield.gdml  ln2shield.gdml  magnet.gdml  scattering_chamber.gdml  scattering_chamber_hallac.gdml  scattering_chamber_hallac_may4_2023.gdml  scattering_chamber_hallac_may4_2023_test.gdml  scattering_chamber_hallac_may4_2023_test.gdml~  scattering_chamber_pol_tcs.gdml  scattering_chamber_vardan_apr13_2023.gdml  simple_magnet.gdml  target.gdml  target_hallac.gdml  tcs_setup.gdml
